--- a/netlist/src/Makefile
+++ b/netlist/src/Makefile
@@ -1,5 +1,4 @@
 OBJDIR := ./objs
-FILENAME := boot
 
 CC              := riscv32-unknown-elf-gcc       # C Compiler
 AS              := riscv32-unknown-elf-as        # Assembler
@@ -9,23 +8,42 @@ OBJCOPY         := riscv32-unknown-elf-objcopy   # Convert ELF to Binary
 
 READELF		    := riscv32-unknown-elf-readelf   # ELF file reader
 
-all: $(OBJDIR)/boot.bin $(OBJDIR)/test.bin
+# Add VPATH to tell Make where to look for source files
+VPATH := . \
+		lib
+
+COBJS := $(OBJDIR)/main.o $(OBJDIR)/gpio.o $(OBJDIR)/delay.o
+
+all: $(OBJDIR)/boot.bin $(OBJDIR)/kernel.bin $(OBJDIR)/test.bin
 
 # Compile .asm files
 $(OBJDIR)/%.o: %.asm
 	mkdir -p $(OBJDIR)
-	$(AS) -march=rv32i_zicsr -mabi=ilp32 -o $@ $^
+	$(AS) -march=rv32i_zicsr -mabi=ilp32 -I lib -o $@ $^
 
-# .o to .elf, disassemble .elf to .asm, and readelf
+# Compile .c files
+$(COBJS): $(OBJDIR)/%.o: %.c
+	mkdir -p $(OBJDIR)
+	$(CC) -march=rv32i_zicsr -mabi=ilp32 -Wall -nostdlib -fno-builtin-memset -I lib -c -O2 -o $@ $<
+
+## .o to .elf, disassemble .elf to .asm (and readelf)
+# For boot
 $(OBJDIR)/boot.elf: $(OBJDIR)/boot.o
 	$(LD) -T boot.ld -o $@ $^
 	$(OBJDUMP) -D $@ > $@.asm
-	$(READELF) --sections $@
+	# $(READELF) --sections $@
 
-$(OBJDIR)/test.elf: $(OBJDIR)/test.o
-	$(LD) -T test.ld -o $@ $^
+# For main.c
+$(OBJDIR)/kernel.elf: $(OBJDIR)/startup.o $(COBJS)
+	$(LD) -T kernel.ld -o $@ $^
 	$(OBJDUMP) -D $@ > $@.asm
-	$(READELF) --sections $@
+	# $(READELF) --sections $@
+
+# For test (no linker script needed)
+$(OBJDIR)/test.elf: $(OBJDIR)/test.o
+	$(LD) -o $@ $^
+	$(OBJDUMP) -D $@ > $@.asm
+	# $(READELF) --sections $@
 
 # .elf to .bin
 $(OBJDIR)/%.bin: $(OBJDIR)/%.elf
@@ -36,6 +54,13 @@ clean:
 	rm -rf *.bin* *.o *.elf* *.hex $(OBJDIR)
 
 .PHONY: hex
-hex:
+hex_boot: $(OBJDIR)/boot.bin
 	python3 hexboot.py
+
+hex_kernel: $(OBJDIR)/kernel.bin
+	python3 hexkernel.py
+
+hex_test: $(OBJDIR)/test.bin
 	python3 hextest.py
+
+hex: hex_boot hex_kernel hex_test
